Adding midi translator

--- a/index.html
+++ b/index.html
@@ -5,6 +5,18 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + TS</title>
+    <style>
+      html {
+        color-scheme: dark;
+      }
+
+      button {
+        background: #666;
+        border: none;
+        border-radius: 0.25rem;
+        padding: 0.375rem 0.5rem;
+      }
+    </style>
   </head>
   <body>
     <!-- <div id="app"></div> -->
