--- a/index.html
+++ b/index.html
@@ -64,38 +64,40 @@ drome.synth('sawtooth').note([36, 0, 43, 0])
           <div class="example">
             <div class="example-title">🎼 Chord Pattern</div>
             <div class="example-code">
-              drome.synth().note([60, 64, 67]).euclid(3, 8)
+              drome.synth().note([60, 64, 67]).euclid(3, 8).adsr(0, 0.25)
             </div>
           </div>
 
           <div class="example">
             <div class="example-title">🌊 Bass + Lead</div>
             <div class="example-code">
-              drome.synth("triangle").note([60, 64, 67]).euclid(5,8)
-              drome.synth("sawtooth").note([48,52,45]).euclid(3,4).lpf(400).adsr({ a: 0.25 })
+              drome.synth("triangle").note([60, 64, 67]).euclid(5,8).adsr(0,
+              0.25)
+              drome.synth("sawtooth").note([48,52,45]).euclid(3,4).lpf(400).adsr(0.333)
             </div>
           </div>
 
           <div class="example">
             <div class="example-title">⚡ Lead Melody</div>
             <div class="example-code">
-              drome.synth("square").note([72, 74, 76, 77]).lpf(1000).fast(2)
+              drome.synth("square").note([72, 74, 76,
+              77]).lpf(1000).fast(2).adsr(0, 0.375)
             </div>
           </div>
 
           <div class="example">
             <div class="example-title">🥁 Kick Pattern</div>
             <div class="example-code">
-              drome.synth("square").note(36).euclid(4, 16).lpf(400).adsr({ a: 0,d: 0.2 }) 
-              
-              drome.synth("sine").note(36).euclid(4,16).lpf(800).adsr({ a: 0, d: 0.1 })
+              drome.synth("square",15).note(36).euclid(4,
+              16).adsr(0,0.2).gain(3)
+              drome.synth("sine").note(36).euclid(4,16).lpf(800).adsr(0,0.1).gain(3)
             </div>
           </div>
 
           <div class="example">
             <div class="example-title">🎵 Arpeggio</div>
             <div class="example-code">
-              drome.synth().note([60, 64, 67, 72]).fast(4)
+              drome.synth().note([60, 64, 67, 72]).fast(4).adsr(0,0.125)
             </div>
           </div>
         </div>
