--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@ drome.synth('sawtooth').note([36, 0, 43, 0])
           <div class="example">
             <div class="example-title">🎼 Chord Pattern</div>
             <div class="example-code">
-              drome.synth().note([60, 64, 67]).euclid(3, 8).adsr(0, 0.25)
+              drome.synth("square",10).note([60, 64, 67]).euclid(3,
+              8).adsr(0,0.25)
             </div>
           </div>
 
